src/tess/tl/test/fail/test_fail_unknown_type_return.tl
// Unknown type name in a return type should be rejected.
#module main
make() -> Quux { 42     }
main() -> CInt { make() }
